--- a/client/app.html
+++ b/client/app.html
@@ -1,5 +1,6 @@
 <head>
-  <title>My App</title>
+  <title>Recog</title>
+  <meta name=viewport content="width=device-width, initial-scale=1">
 </head>
 
 <body>
